Version 1.1.0
[list]
[*]Added beta terrain gen world type. This world type uses BTA biomes but generates terrain based on old beta 1.7.3 terrain. Any seeds that worked in beta will work with this world type, although caves, ores, etc. will be different. The world type also generates with all vanilla features such as strongholds, villages, mineshafts, ravines, etc.
[*]Added skylands world type (based on the old sky dimension generator from beta). I make no claims that this is in any way balanced, I simply added it as something fun and unique. It is currently incomplete as it does not generate villages, temples, or any other structures.
[*]Changed (increased) the depth of terracotta in badlands.
[*]Changed tall grass and flowers to spawn already covered in snow in snow biomes if they are able to see the sky.
[*]Changed how fallen logs generate to have variance in their direction and to generate with a stump at one end.
[/list]

Version 1.0
[list]
[*]Added 27 new biomes, plus 4 deco exclusive biomes, each of which are detailed below.
[*]Added 2 new world types using the new biomes. The first will work for vanilla BTW, while the second is only enabled when Deco is also installed, and adds many of Deco's features to world gen.
[*]Added the /biome command to be able to see the name of the current biome.
[*]Added the ability for clay to generate in sand and red sand. Given that some biomes exclusively use sand or red sand for their lake and river beds, this was done to enable clay spawning in those biomes. However, the overall spawn rate of clay has been reduced by 33% to compensate for the increase in viable spawn areas. This only affects this addon's world types.
[/list]
Biomes:
The occurance of various different world gen features per biome is kept as close as possible to their frequency in vanilla world gen to maintain balance.
[list]
[*]Woods: Vanilla forest with some tweaks. Can spawn wolves.