@@ -24,7 +24,7 @@ public class BTABiomeGenValley extends BTABiomeGenWoods {
 
             if (var10 == Block.stone.blockID)
             {
-                par1World.setBlock(var7, var8, var9, Block.oreEmerald.blockID, 0, 2);
+                par1World.setBlock(var7, var8, var9, Block.oreEmerald.blockID, 2, 2);
             }
         }
 
